
    * bzrlib.fetch.fetch and bzrlib.fetch.greedy_fetch are now deprecated,
      please use 'branch.fetch' or 'repository.fetch' depending on your
      needs. (Robert Collins)

    * deprecated methods now have a 'is_deprecated' flag on them that can
      be checked, if you need to determine whether a given callable is 
      deprecated at runtime. (Robert Collins)

  TESTING:

    * SFTP tests now shortcut the SSH negotiation, reducing test overhead
      for testing SFTP protocol support. (Robey Pointer)

    * Branch formats are now tested once per implementation (see bzrlib.
      tests.branch_implementations. This is analagous to the transport
      interface tests, and has been followed up with working tree,
      repository and BzrDir tests. (Robert Collins)

    * New test base class TestCaseWithTransport provides a transport aware
      test environment, useful for testing any transport-interface using
      code. The test suite option --transport controls the transport used
      by this class (when its not being used as part of implementation
      contract testing). (Robert Collins)


bzr 0.7rc1 2006-01-09

  CHANGES:

    * .bzrignore is excluded from exports, on the grounds that it's a bzr 
      internal-use file and may not be wanted.  (Jamie Wilkinson)

    * The "bzr directories" command were removed in favor of the new
      --kind option to the "bzr inventory" command.  To list all 
      versioned directories, now use "bzr inventory --kind directory".  
      (Johan Rydberg)

    * Under Windows configuration directory is now %APPDATA%\bazaar\2.0
      by default. (John Arbash Meinel)

    * The parent of Bzr configuration directory can be set by BZR_HOME
      environment variable. Now the path for it is searched in BZR_HOME, then
      in HOME. Under Windows the order is: BZR_HOME, APPDATA (usually
      points to C:\Documents and Settings\User Name\Application Data), HOME.
      (John Arbash Meinel)
